tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_duplicate_implementation_with_alias/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Impl for type `MyType` overlaps with existing impl
   ┌─ src/main.nr:10:10
   │
10 │     impl Default2 for MyStruct {
   │          -------- Previous impl defined here
   ·
13 │     impl Default2 for MyType {
   │                       ------ Overlapping impl
   │

Aborting due to 1 previous error
