tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_duplicate_implementation_with_alias/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Impl for type `MyType` overlaps with existing impl
   ┌─ src/main.nr:10:10
   │
10 │     impl Default2 for MyStruct {
   │          -------- Previous impl defined here
   ·
13 │     impl Default2 for MyType {
   │                       ------ Overlapping impl
   │

Aborting due to 1 previous error
